# enka-to-go

./: .dockerignore  .gitignore  Dockerfile  README.md  pm2.json  pyproject.toml  renovate.json  requirements.txt  ruff.toml  run.py  update_data.py
.github/workflows/: bump-version.yml  type-check.yml
enka_to_go/: update_data.py
enka_to_go/enka/: enums.py  exceptions.py  request.py
enka_to_go/enka/models/: character.py  player.py  response.py
enka_to_go/go/: converter.py  maps.py
enka_to_go/web_app/: main.py
enka_to_go/zo/: converter.py  loader.py  maps.py
src/: main.py
src/app/web_app/: main.py
src/app/zo/: converter.py  maps.py
tests/: test_enka.py
