[project]
name = "enka-to-go"
version = "1.0.5"
description = "Export your Enka showcase to Genshin Optimizer for damage calculation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["enka>=2.4.3", "flet[web]>=0.25.2"]
license = { file = "LICENSE" }
authors = [{ name = "seriaati", email = "seria.ati@gmail.com" }]

[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"

[tool.uv.sources]
enka = { git = "https://github.com/seriaati/enka-py" }

[dependency-groups]
type-check = ["pyright[nodejs]>=1.1.407"]
